v/0.2.0/_sources/examples/08_distributed_manager.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/08_distributed_manager.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_08_distributed_manager.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_08_distributed_manager.py:


Distributed Manager Inference
=============================

Setting up distributed manager for parallel inference

Many inference workflows are embarrassingly parallel and can be easily sharded across
multiple devices.
This example demonstrates how one can use the Modulus distributed manager to distribute
inference across mutliple GPUs.
The `distributed manager <https://github.com/NVIDIA/modulus/blob/main/modulus/distributed/manager.py>`_
is a utility that provides a useful set of properties that pertain to a parallel
environment.

In this example you will learn:

- How to use the distributed manager to access parallel environment properties
- Parallelize deterministic inference across multiple initial date-times
- Limitations of parallel inference in Earth2Studio
- Post-processing strategies of parallel job outputs

.. GENERATED FROM PYTHON SOURCE LINES 41-60

Set Up
------
Set up the distributed manager by initializing it. Out of the box, the distributed
manager supports MPI, SLURM and PyTorch parallel environments which provide information
regarding the parallel enviroment but environment variables.

For example, this script could be ran using:

.. code-block:: bash

  # OpenMPI
  mpirun -np 2 python 08_distributed_manager.py
  # Torch run
  torchrun --standalone --nnodes=1 --nproc-per-node=2 08_distributed_manager.py

.. warning::

  When running in parallel, make sure the .env file in the repository examples
  folder is *not* present. The .env file is intended for the documentation build only.

.. GENERATED FROM PYTHON SOURCE LINES 62-83

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    import numpy as np
    import torch
    from loguru import logger
    from modulus.distributed import DistributedManager

    DistributedManager.initialize()  # Only call this once in the entire script!
    dist = DistributedManager()
    assert (  # noqa: S101
        dist._distributed
    ), "Looks like torch distributed isn't set up. Check your env variables!"

    logger.info(
        f"Inference runner {dist.rank} of {dist.world_size} with device {dist.device}"
    )




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-07-05 22:06:45.875 | INFO     | __main__:<module>:80 - Inference runner 0 of 1 with device cuda:0




.. GENERATED FROM PYTHON SOURCE LINES 84-88

Next the needed components get initialized.
Rigorous parallel support is not part of Earth2Studio's design goals, there are some
spots where potential race conditions can occur. Thus some additional care should be
taken to ensure safe parallel inference.

.. GENERATED FROM PYTHON SOURCE LINES 90-103

.. code-block:: Python

    from earth2studio.data import ARCO
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import DLWP

    # Load model
    package = DLWP.load_default_package()
    if dist.rank == 0:
        model = DLWP.load_model(package)

    torch.distributed.barrier()
    if dist.rank != 0:
        model = DLWP.load_model(package)








.. GENERATED FROM PYTHON SOURCE LINES 104-111

When loading models that are built into Earth2Studio, the model's checkpoint files
will be downloaded into the machines cache. If each inference process has access to
the same cache location, then only one should download the checkpoint triggered by
:py:func:`load_model`.

Here :py:class:`earth2studio.models.px.DLWP` checkpoint files are first downloaded by
process 0 and then loaded by other processes.

.. GENERATED FROM PYTHON SOURCE LINES 113-117

.. code-block:: Python


    # Create the data source
    data = ARCO()








.. GENERATED FROM PYTHON SOURCE LINES 118-121

The remote date store will place cached data into separate caches for each process.
This makes the download of initial state data safe during parallel inference but also
means that multiple jobs will download the same date-time if needed.

.. GENERATED FROM PYTHON SOURCE LINES 123-126

.. code-block:: Python

    chunks = {"time": 1}
    io = ZarrBackend(file_name=f"outputs/08_output_{dist.rank}.zarr", chunks=chunks)








.. GENERATED FROM PYTHON SOURCE LINES 127-137

Earth2Studio does not provide distributed IO support. The recommendation is to always
output data for each process to a separate file, then aggregate the data during post
processing.

Execute the Workflow
--------------------
Next we can run the workflow. This example will run inference for a random date across
several years and just save total column water vapor. Shard the initial date-times
across the each process. The distributed manager will provide the device ID for the
process.

.. GENERATED FROM PYTHON SOURCE LINES 139-156

.. code-block:: Python

    import earth2studio.run as run

    times = np.array([f"200{i:d}-06-01T00:00:00" for i in range(0, 6)])
    assert (  # noqa: S101
        len(times) > dist.world_size
    ), "Inference runs should be greater than processes"
    time_shard = np.array_split(times, dist.world_size)[dist.rank]

    nsteps = 20
    output_coords = {"variable": np.array(["tcwv"])}
    io = run.deterministic(
        time_shard, nsteps, model, data, io, output_coords=output_coords, device=dist.device
    )

    print(io.root.tree())
    torch.distributed.barrier()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-07-05 22:06:57.734 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2024-07-05 22:06:57.734 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda:0
    Fetching ARCO for 2000-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:06:57.987 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2000-05-31T18:00:00
    Fetching ARCO for 2000-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2000-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:17,  2.88s/it]                                                                                        2024-07-05 22:07:00.863 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2000-05-31T18:00:00
    Fetching ARCO for 2000-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:17,  2.88s/it]    Fetching ARCO for 2000-05-31 18:00:00:  29%|██▊       | 2/7 [00:05<00:13,  2.61s/it]                                                                                        2024-07-05 22:07:03.291 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2000-05-31T18:00:00
    Fetching ARCO for 2000-05-31 18:00:00:  29%|██▊       | 2/7 [00:05<00:13,  2.61s/it]    Fetching ARCO for 2000-05-31 18:00:00:  43%|████▎     | 3/7 [00:06<00:08,  2.05s/it]                                                                                        2024-07-05 22:07:04.662 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2000-05-31T18:00:00
    Fetching ARCO for 2000-05-31 18:00:00:  43%|████▎     | 3/7 [00:06<00:08,  2.05s/it]    Fetching ARCO for 2000-05-31 18:00:00:  57%|█████▋    | 4/7 [00:08<00:05,  1.81s/it]                                                                                        2024-07-05 22:07:06.107 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2000-05-31T18:00:00
    Fetching ARCO for 2000-05-31 18:00:00:  57%|█████▋    | 4/7 [00:08<00:05,  1.81s/it]    Fetching ARCO for 2000-05-31 18:00:00:  71%|███████▏  | 5/7 [00:09<00:03,  1.67s/it]                                                                                        2024-07-05 22:07:07.531 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2000-05-31T18:00:00
    Fetching ARCO for 2000-05-31 18:00:00:  71%|███████▏  | 5/7 [00:09<00:03,  1.67s/it]    Fetching ARCO for 2000-05-31 18:00:00:  86%|████████▌ | 6/7 [00:10<00:01,  1.29s/it]                                                                                        2024-07-05 22:07:08.088 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2000-05-31T18:00:00
    Fetching ARCO for 2000-05-31 18:00:00:  86%|████████▌ | 6/7 [00:10<00:01,  1.29s/it]    Fetching ARCO for 2000-05-31 18:00:00: 100%|██████████| 7/7 [00:10<00:00,  1.11s/it]    Fetching ARCO for 2000-05-31 18:00:00: 100%|██████████| 7/7 [00:10<00:00,  1.55s/it]
    Fetching ARCO for 2001-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:07:08.933 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2001-05-31T18:00:00
    Fetching ARCO for 2001-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2001-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:17,  2.96s/it]                                                                                        2024-07-05 22:07:11.891 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2001-05-31T18:00:00
    Fetching ARCO for 2001-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:17,  2.96s/it]    Fetching ARCO for 2001-05-31 18:00:00:  29%|██▊       | 2/7 [00:05<00:12,  2.59s/it]                                                                                        2024-07-05 22:07:14.226 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2001-05-31T18:00:00
    Fetching ARCO for 2001-05-31 18:00:00:  29%|██▊       | 2/7 [00:05<00:12,  2.59s/it]    Fetching ARCO for 2001-05-31 18:00:00:  43%|████▎     | 3/7 [00:06<00:08,  2.04s/it]                                                                                        2024-07-05 22:07:15.616 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2001-05-31T18:00:00
    Fetching ARCO for 2001-05-31 18:00:00:  43%|████▎     | 3/7 [00:06<00:08,  2.04s/it]    Fetching ARCO for 2001-05-31 18:00:00:  57%|█████▋    | 4/7 [00:08<00:05,  1.76s/it]                                                                                        2024-07-05 22:07:16.952 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2001-05-31T18:00:00
    Fetching ARCO for 2001-05-31 18:00:00:  57%|█████▋    | 4/7 [00:08<00:05,  1.76s/it]    Fetching ARCO for 2001-05-31 18:00:00:  71%|███████▏  | 5/7 [00:09<00:03,  1.77s/it]                                                                                        2024-07-05 22:07:18.723 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2001-05-31T18:00:00
    Fetching ARCO for 2001-05-31 18:00:00:  71%|███████▏  | 5/7 [00:09<00:03,  1.77s/it]    Fetching ARCO for 2001-05-31 18:00:00:  86%|████████▌ | 6/7 [00:10<00:01,  1.34s/it]                                                                                        2024-07-05 22:07:19.249 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2001-05-31T18:00:00
    Fetching ARCO for 2001-05-31 18:00:00:  86%|████████▌ | 6/7 [00:10<00:01,  1.34s/it]    Fetching ARCO for 2001-05-31 18:00:00: 100%|██████████| 7/7 [00:10<00:00,  1.08s/it]    Fetching ARCO for 2001-05-31 18:00:00: 100%|██████████| 7/7 [00:10<00:00,  1.55s/it]
    Fetching ARCO for 2002-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:07:19.890 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2002-05-31T18:00:00
    Fetching ARCO for 2002-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2002-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:12,  2.12s/it]                                                                                        2024-07-05 22:07:22.009 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2002-05-31T18:00:00
    Fetching ARCO for 2002-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:12,  2.12s/it]    Fetching ARCO for 2002-05-31 18:00:00:  29%|██▊       | 2/7 [00:04<00:10,  2.18s/it]                                                                                        2024-07-05 22:07:24.223 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2002-05-31T18:00:00
    Fetching ARCO for 2002-05-31 18:00:00:  29%|██▊       | 2/7 [00:04<00:10,  2.18s/it]    Fetching ARCO for 2002-05-31 18:00:00:  43%|████▎     | 3/7 [00:05<00:07,  1.83s/it]                                                                                        2024-07-05 22:07:25.649 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2002-05-31T18:00:00
    Fetching ARCO for 2002-05-31 18:00:00:  43%|████▎     | 3/7 [00:05<00:07,  1.83s/it]    Fetching ARCO for 2002-05-31 18:00:00:  57%|█████▋    | 4/7 [00:07<00:05,  1.78s/it]                                                                                        2024-07-05 22:07:27.352 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2002-05-31T18:00:00
    Fetching ARCO for 2002-05-31 18:00:00:  57%|█████▋    | 4/7 [00:07<00:05,  1.78s/it]    Fetching ARCO for 2002-05-31 18:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.64s/it]                                                                                        2024-07-05 22:07:28.751 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2002-05-31T18:00:00
    Fetching ARCO for 2002-05-31 18:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.64s/it]    Fetching ARCO for 2002-05-31 18:00:00:  86%|████████▌ | 6/7 [00:09<00:01,  1.24s/it]                                                                                        2024-07-05 22:07:29.213 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2002-05-31T18:00:00
    Fetching ARCO for 2002-05-31 18:00:00:  86%|████████▌ | 6/7 [00:09<00:01,  1.24s/it]    Fetching ARCO for 2002-05-31 18:00:00: 100%|██████████| 7/7 [00:10<00:00,  1.08s/it]    Fetching ARCO for 2002-05-31 18:00:00: 100%|██████████| 7/7 [00:10<00:00,  1.44s/it]
    Fetching ARCO for 2003-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:07:30.072 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2003-05-31T18:00:00
    Fetching ARCO for 2003-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2003-05-31 18:00:00:  14%|█▍        | 1/7 [00:04<00:25,  4.25s/it]                                                                                        2024-07-05 22:07:34.321 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2003-05-31T18:00:00
    Fetching ARCO for 2003-05-31 18:00:00:  14%|█▍        | 1/7 [00:04<00:25,  4.25s/it]    Fetching ARCO for 2003-05-31 18:00:00:  29%|██▊       | 2/7 [00:07<00:17,  3.41s/it]                                                                                        2024-07-05 22:07:37.143 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2003-05-31T18:00:00
    Fetching ARCO for 2003-05-31 18:00:00:  29%|██▊       | 2/7 [00:07<00:17,  3.41s/it]    Fetching ARCO for 2003-05-31 18:00:00:  43%|████▎     | 3/7 [00:08<00:10,  2.50s/it]                                                                                        2024-07-05 22:07:38.568 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2003-05-31T18:00:00
    Fetching ARCO for 2003-05-31 18:00:00:  43%|████▎     | 3/7 [00:08<00:10,  2.50s/it]    Fetching ARCO for 2003-05-31 18:00:00:  57%|█████▋    | 4/7 [00:10<00:06,  2.14s/it]                                                                                        2024-07-05 22:07:40.141 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2003-05-31T18:00:00
    Fetching ARCO for 2003-05-31 18:00:00:  57%|█████▋    | 4/7 [00:10<00:06,  2.14s/it]    Fetching ARCO for 2003-05-31 18:00:00:  71%|███████▏  | 5/7 [00:11<00:03,  1.94s/it]                                                                                        2024-07-05 22:07:41.739 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2003-05-31T18:00:00
    Fetching ARCO for 2003-05-31 18:00:00:  71%|███████▏  | 5/7 [00:11<00:03,  1.94s/it]    Fetching ARCO for 2003-05-31 18:00:00:  86%|████████▌ | 6/7 [00:12<00:01,  1.47s/it]                                                                                        2024-07-05 22:07:42.295 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2003-05-31T18:00:00
    Fetching ARCO for 2003-05-31 18:00:00:  86%|████████▌ | 6/7 [00:12<00:01,  1.47s/it]    Fetching ARCO for 2003-05-31 18:00:00: 100%|██████████| 7/7 [00:12<00:00,  1.13s/it]    Fetching ARCO for 2003-05-31 18:00:00: 100%|██████████| 7/7 [00:12<00:00,  1.81s/it]
    Fetching ARCO for 2004-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:07:42.842 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2004-05-31T18:00:00
    Fetching ARCO for 2004-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2004-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:12,  2.12s/it]                                                                                        2024-07-05 22:07:44.965 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2004-05-31T18:00:00
    Fetching ARCO for 2004-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:12,  2.12s/it]    Fetching ARCO for 2004-05-31 18:00:00:  29%|██▊       | 2/7 [00:05<00:12,  2.59s/it]                                                                                        2024-07-05 22:07:47.884 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2004-05-31T18:00:00
    Fetching ARCO for 2004-05-31 18:00:00:  29%|██▊       | 2/7 [00:05<00:12,  2.59s/it]    Fetching ARCO for 2004-05-31 18:00:00:  43%|████▎     | 3/7 [00:06<00:08,  2.02s/it]                                                                                        2024-07-05 22:07:49.228 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2004-05-31T18:00:00
    Fetching ARCO for 2004-05-31 18:00:00:  43%|████▎     | 3/7 [00:06<00:08,  2.02s/it]    Fetching ARCO for 2004-05-31 18:00:00:  57%|█████▋    | 4/7 [00:07<00:05,  1.79s/it]                                                                                        2024-07-05 22:07:50.658 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2004-05-31T18:00:00
    Fetching ARCO for 2004-05-31 18:00:00:  57%|█████▋    | 4/7 [00:07<00:05,  1.79s/it]    Fetching ARCO for 2004-05-31 18:00:00:  71%|███████▏  | 5/7 [00:09<00:03,  1.63s/it]                                                                                        2024-07-05 22:07:52.010 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2004-05-31T18:00:00
    Fetching ARCO for 2004-05-31 18:00:00:  71%|███████▏  | 5/7 [00:09<00:03,  1.63s/it]    Fetching ARCO for 2004-05-31 18:00:00:  86%|████████▌ | 6/7 [00:09<00:01,  1.34s/it]                                                                                        2024-07-05 22:07:52.773 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2004-05-31T18:00:00
    Fetching ARCO for 2004-05-31 18:00:00:  86%|████████▌ | 6/7 [00:09<00:01,  1.34s/it]    Fetching ARCO for 2004-05-31 18:00:00: 100%|██████████| 7/7 [00:10<00:00,  1.05s/it]    Fetching ARCO for 2004-05-31 18:00:00: 100%|██████████| 7/7 [00:10<00:00,  1.48s/it]
    Fetching ARCO for 2005-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:07:53.342 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2005-05-31T18:00:00
    Fetching ARCO for 2005-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2005-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:13,  2.29s/it]                                                                                        2024-07-05 22:07:55.635 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2005-05-31T18:00:00
    Fetching ARCO for 2005-05-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:13,  2.29s/it]    Fetching ARCO for 2005-05-31 18:00:00:  29%|██▊       | 2/7 [00:05<00:13,  2.74s/it]                                                                                        2024-07-05 22:07:58.693 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2005-05-31T18:00:00
    Fetching ARCO for 2005-05-31 18:00:00:  29%|██▊       | 2/7 [00:05<00:13,  2.74s/it]    Fetching ARCO for 2005-05-31 18:00:00:  43%|████▎     | 3/7 [00:07<00:09,  2.35s/it]                                                                                        2024-07-05 22:08:00.578 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2005-05-31T18:00:00
    Fetching ARCO for 2005-05-31 18:00:00:  43%|████▎     | 3/7 [00:07<00:09,  2.35s/it]    Fetching ARCO for 2005-05-31 18:00:00:  57%|█████▋    | 4/7 [00:08<00:05,  1.97s/it]                                                                                        2024-07-05 22:08:01.962 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2005-05-31T18:00:00
    Fetching ARCO for 2005-05-31 18:00:00:  57%|█████▋    | 4/7 [00:08<00:05,  1.97s/it]    Fetching ARCO for 2005-05-31 18:00:00:  71%|███████▏  | 5/7 [00:10<00:03,  1.90s/it]                                                                                        2024-07-05 22:08:03.730 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2005-05-31T18:00:00
    Fetching ARCO for 2005-05-31 18:00:00:  71%|███████▏  | 5/7 [00:10<00:03,  1.90s/it]    Fetching ARCO for 2005-05-31 18:00:00:  86%|████████▌ | 6/7 [00:11<00:01,  1.51s/it]                                                                                        2024-07-05 22:08:04.477 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2005-05-31T18:00:00
    Fetching ARCO for 2005-05-31 18:00:00:  86%|████████▌ | 6/7 [00:11<00:01,  1.51s/it]    Fetching ARCO for 2005-05-31 18:00:00: 100%|██████████| 7/7 [00:11<00:00,  1.17s/it]    Fetching ARCO for 2005-05-31 18:00:00: 100%|██████████| 7/7 [00:11<00:00,  1.66s/it]
    Fetching ARCO for 2000-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:08:05.128 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2000-06-01T00:00:00
    Fetching ARCO for 2000-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2000-06-01 00:00:00:  14%|█▍        | 1/7 [00:01<00:11,  1.96s/it]                                                                                        2024-07-05 22:08:07.092 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2000-06-01T00:00:00
    Fetching ARCO for 2000-06-01 00:00:00:  14%|█▍        | 1/7 [00:01<00:11,  1.96s/it]    Fetching ARCO for 2000-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:09,  1.86s/it]                                                                                        2024-07-05 22:08:08.877 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2000-06-01T00:00:00
    Fetching ARCO for 2000-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:09,  1.86s/it]    Fetching ARCO for 2000-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.68s/it]                                                                                        2024-07-05 22:08:10.342 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2000-06-01T00:00:00
    Fetching ARCO for 2000-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.68s/it]    Fetching ARCO for 2000-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.58s/it]                                                                                        2024-07-05 22:08:11.761 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2000-06-01T00:00:00
    Fetching ARCO for 2000-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.58s/it]    Fetching ARCO for 2000-06-01 00:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.61s/it]                                                                                        2024-07-05 22:08:13.440 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2000-06-01T00:00:00
    Fetching ARCO for 2000-06-01 00:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.61s/it]    Fetching ARCO for 2000-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.21s/it]                                                                                        2024-07-05 22:08:13.879 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2000-06-01T00:00:00
    Fetching ARCO for 2000-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.21s/it]    Fetching ARCO for 2000-06-01 00:00:00: 100%|██████████| 7/7 [00:09<00:00,  1.01it/s]    Fetching ARCO for 2000-06-01 00:00:00: 100%|██████████| 7/7 [00:09<00:00,  1.33s/it]
    Fetching ARCO for 2001-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:08:14.519 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2001-06-01T00:00:00
    Fetching ARCO for 2001-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2001-06-01 00:00:00:  14%|█▍        | 1/7 [00:02<00:12,  2.04s/it]                                                                                        2024-07-05 22:08:16.556 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2001-06-01T00:00:00
    Fetching ARCO for 2001-06-01 00:00:00:  14%|█▍        | 1/7 [00:02<00:12,  2.04s/it]    Fetching ARCO for 2001-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:08,  1.70s/it]                                                                                        2024-07-05 22:08:18.028 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2001-06-01T00:00:00
    Fetching ARCO for 2001-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:08,  1.70s/it]    Fetching ARCO for 2001-06-01 00:00:00:  43%|████▎     | 3/7 [00:04<00:06,  1.55s/it]                                                                                        2024-07-05 22:08:19.394 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2001-06-01T00:00:00
    Fetching ARCO for 2001-06-01 00:00:00:  43%|████▎     | 3/7 [00:04<00:06,  1.55s/it]    Fetching ARCO for 2001-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.48s/it]                                                                                        2024-07-05 22:08:20.757 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2001-06-01T00:00:00
    Fetching ARCO for 2001-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.48s/it]    Fetching ARCO for 2001-06-01 00:00:00:  71%|███████▏  | 5/7 [00:07<00:02,  1.45s/it]                                                                                        2024-07-05 22:08:22.155 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2001-06-01T00:00:00
    Fetching ARCO for 2001-06-01 00:00:00:  71%|███████▏  | 5/7 [00:07<00:02,  1.45s/it]    Fetching ARCO for 2001-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.23s/it]                                                                                        2024-07-05 22:08:22.963 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2001-06-01T00:00:00
    Fetching ARCO for 2001-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.23s/it]    Fetching ARCO for 2001-06-01 00:00:00: 100%|██████████| 7/7 [00:08<00:00,  1.03it/s]    Fetching ARCO for 2001-06-01 00:00:00: 100%|██████████| 7/7 [00:08<00:00,  1.27s/it]
    Fetching ARCO for 2002-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:08:23.531 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2002-06-01T00:00:00
    Fetching ARCO for 2002-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2002-06-01 00:00:00:  14%|█▍        | 1/7 [00:01<00:11,  1.96s/it]                                                                                        2024-07-05 22:08:25.487 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2002-06-01T00:00:00
    Fetching ARCO for 2002-06-01 00:00:00:  14%|█▍        | 1/7 [00:01<00:11,  1.96s/it]    Fetching ARCO for 2002-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:09,  1.84s/it]                                                                                        2024-07-05 22:08:27.250 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2002-06-01T00:00:00
    Fetching ARCO for 2002-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:09,  1.84s/it]    Fetching ARCO for 2002-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.67s/it]                                                                                        2024-07-05 22:08:28.714 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2002-06-01T00:00:00
    Fetching ARCO for 2002-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.67s/it]    Fetching ARCO for 2002-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.57s/it]                                                                                        2024-07-05 22:08:30.131 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2002-06-01T00:00:00
    Fetching ARCO for 2002-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.57s/it]    Fetching ARCO for 2002-06-01 00:00:00:  71%|███████▏  | 5/7 [00:07<00:02,  1.49s/it]                                                                                        2024-07-05 22:08:31.487 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2002-06-01T00:00:00
    Fetching ARCO for 2002-06-01 00:00:00:  71%|███████▏  | 5/7 [00:07<00:02,  1.49s/it]    Fetching ARCO for 2002-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.14s/it]                                                                                        2024-07-05 22:08:31.939 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2002-06-01T00:00:00
    Fetching ARCO for 2002-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.14s/it]    Fetching ARCO for 2002-06-01 00:00:00: 100%|██████████| 7/7 [00:08<00:00,  1.11it/s]    Fetching ARCO for 2002-06-01 00:00:00: 100%|██████████| 7/7 [00:08<00:00,  1.26s/it]
    Fetching ARCO for 2003-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:08:32.472 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2003-06-01T00:00:00
    Fetching ARCO for 2003-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2003-06-01 00:00:00:  14%|█▍        | 1/7 [00:02<00:13,  2.29s/it]                                                                                        2024-07-05 22:08:34.760 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2003-06-01T00:00:00
    Fetching ARCO for 2003-06-01 00:00:00:  14%|█▍        | 1/7 [00:02<00:13,  2.29s/it]    Fetching ARCO for 2003-06-01 00:00:00:  29%|██▊       | 2/7 [00:04<00:09,  1.97s/it]                                                                                        2024-07-05 22:08:36.500 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2003-06-01T00:00:00
    Fetching ARCO for 2003-06-01 00:00:00:  29%|██▊       | 2/7 [00:04<00:09,  1.97s/it]    Fetching ARCO for 2003-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.66s/it]                                                                                        2024-07-05 22:08:37.806 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2003-06-01T00:00:00
    Fetching ARCO for 2003-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.66s/it]    Fetching ARCO for 2003-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.53s/it]                                                                                        2024-07-05 22:08:39.137 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2003-06-01T00:00:00
    Fetching ARCO for 2003-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.53s/it]    Fetching ARCO for 2003-06-01 00:00:00:  71%|███████▏  | 5/7 [00:07<00:02,  1.46s/it]                                                                                        2024-07-05 22:08:40.464 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2003-06-01T00:00:00
    Fetching ARCO for 2003-06-01 00:00:00:  71%|███████▏  | 5/7 [00:07<00:02,  1.46s/it]    Fetching ARCO for 2003-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.12s/it]                                                                                        2024-07-05 22:08:40.924 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2003-06-01T00:00:00
    Fetching ARCO for 2003-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.12s/it]    Fetching ARCO for 2003-06-01 00:00:00: 100%|██████████| 7/7 [00:09<00:00,  1.01it/s]    Fetching ARCO for 2003-06-01 00:00:00: 100%|██████████| 7/7 [00:09<00:00,  1.31s/it]
    Fetching ARCO for 2004-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:08:41.775 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2004-06-01T00:00:00
    Fetching ARCO for 2004-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2004-06-01 00:00:00:  14%|█▍        | 1/7 [00:01<00:11,  1.91s/it]                                                                                        2024-07-05 22:08:43.690 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2004-06-01T00:00:00
    Fetching ARCO for 2004-06-01 00:00:00:  14%|█▍        | 1/7 [00:01<00:11,  1.91s/it]    Fetching ARCO for 2004-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:08,  1.79s/it]                                                                                        2024-07-05 22:08:45.400 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2004-06-01T00:00:00
    Fetching ARCO for 2004-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:08,  1.79s/it]    Fetching ARCO for 2004-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.61s/it]                                                                                        2024-07-05 22:08:46.795 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2004-06-01T00:00:00
    Fetching ARCO for 2004-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.61s/it]    Fetching ARCO for 2004-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.65s/it]                                                                                        2024-07-05 22:08:48.506 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2004-06-01T00:00:00
    Fetching ARCO for 2004-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.65s/it]    Fetching ARCO for 2004-06-01 00:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.54s/it]                                                                                        2024-07-05 22:08:49.849 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2004-06-01T00:00:00
    Fetching ARCO for 2004-06-01 00:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.54s/it]    Fetching ARCO for 2004-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.18s/it]                                                                                        2024-07-05 22:08:50.328 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2004-06-01T00:00:00
    Fetching ARCO for 2004-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.18s/it]    Fetching ARCO for 2004-06-01 00:00:00: 100%|██████████| 7/7 [00:08<00:00,  1.07it/s]    Fetching ARCO for 2004-06-01 00:00:00: 100%|██████████| 7/7 [00:08<00:00,  1.28s/it]
    Fetching ARCO for 2005-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                2024-07-05 22:08:50.867 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t850 at 2005-06-01T00:00:00
    Fetching ARCO for 2005-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO for 2005-06-01 00:00:00:  14%|█▍        | 1/7 [00:02<00:12,  2.13s/it]                                                                                        2024-07-05 22:08:52.994 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z1000 at 2005-06-01T00:00:00
    Fetching ARCO for 2005-06-01 00:00:00:  14%|█▍        | 1/7 [00:02<00:12,  2.13s/it]    Fetching ARCO for 2005-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:09,  1.90s/it]                                                                                        2024-07-05 22:08:54.736 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z700 at 2005-06-01T00:00:00
    Fetching ARCO for 2005-06-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:09,  1.90s/it]    Fetching ARCO for 2005-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.68s/it]                                                                                        2024-07-05 22:08:56.146 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z500 at 2005-06-01T00:00:00
    Fetching ARCO for 2005-06-01 00:00:00:  43%|████▎     | 3/7 [00:05<00:06,  1.68s/it]    Fetching ARCO for 2005-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.57s/it]                                                                                        2024-07-05 22:08:57.544 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: z300 at 2005-06-01T00:00:00
    Fetching ARCO for 2005-06-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.57s/it]    Fetching ARCO for 2005-06-01 00:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.58s/it]                                                                                        2024-07-05 22:08:59.149 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: tcwv at 2005-06-01T00:00:00
    Fetching ARCO for 2005-06-01 00:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.58s/it]    Fetching ARCO for 2005-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.21s/it]                                                                                        2024-07-05 22:08:59.636 | DEBUG    | earth2studio.data.arco:fetch_arco_dataarray:166 - Fetching ARCO zarr array for variable: t2m at 2005-06-01T00:00:00
    Fetching ARCO for 2005-06-01 00:00:00:  86%|████████▌ | 6/7 [00:08<00:01,  1.21s/it]    Fetching ARCO for 2005-06-01 00:00:00: 100%|██████████| 7/7 [00:09<00:00,  1.04it/s]    Fetching ARCO for 2005-06-01 00:00:00: 100%|██████████| 7/7 [00:09<00:00,  1.32s/it]
    2024-07-05 22:09:00.326 | SUCCESS  | earth2studio.run:deterministic:95 - Fetched data from ARCO
    2024-07-05 22:09:00.349 | INFO     | earth2studio.run:deterministic:125 - Inference starting!
    Running inference:   0%|          | 0/21 [00:00<?, ?it/s]    Running inference:   5%|▍         | 1/21 [00:00<00:04,  4.14it/s]    Running inference:  10%|▉         | 2/21 [00:00<00:06,  2.97it/s]    Running inference:  14%|█▍        | 3/21 [00:01<00:06,  2.82it/s]    Running inference:  19%|█▉        | 4/21 [00:01<00:06,  2.66it/s]    Running inference:  24%|██▍       | 5/21 [00:01<00:06,  2.56it/s]    Running inference:  29%|██▊       | 6/21 [00:02<00:06,  2.44it/s]    Running inference:  33%|███▎      | 7/21 [00:02<00:05,  2.35it/s]    Running inference:  38%|███▊      | 8/21 [00:03<00:05,  2.23it/s]    Running inference:  43%|████▎     | 9/21 [00:03<00:05,  2.17it/s]    Running inference:  48%|████▊     | 10/21 [00:04<00:05,  2.09it/s]    Running inference:  52%|█████▏    | 11/21 [00:04<00:04,  2.07it/s]    Running inference:  57%|█████▋    | 12/21 [00:05<00:04,  2.01it/s]    Running inference:  62%|██████▏   | 13/21 [00:05<00:04,  1.96it/s]    Running inference:  67%|██████▋   | 14/21 [00:06<00:03,  1.90it/s]    Running inference:  71%|███████▏  | 15/21 [00:06<00:03,  1.86it/s]    Running inference:  76%|███████▌  | 16/21 [00:07<00:02,  1.82it/s]    Running inference:  81%|████████  | 17/21 [00:08<00:02,  1.80it/s]    Running inference:  86%|████████▌ | 18/21 [00:08<00:01,  1.69it/s]    Running inference:  90%|█████████ | 19/21 [00:09<00:01,  1.59it/s]    Running inference:  95%|█████████▌| 20/21 [00:10<00:00,  1.51it/s]    Running inference: 100%|██████████| 21/21 [00:10<00:00,  1.45it/s]    Running inference: 100%|██████████| 21/21 [00:10<00:00,  1.91it/s]
    2024-07-05 22:09:11.327 | SUCCESS  | earth2studio.run:deterministic:135 - Inference complete
    /
     ├── lat (721,) float64
     ├── lead_time (21,) timedelta64[h]
     ├── lon (1440,) float64
     ├── tcwv (6, 21, 721, 1440) float32
     └── time (6,) datetime64[ns]




.. GENERATED FROM PYTHON SOURCE LINES 157-168

Post Processing
---------------
Finally, we can post process the results. Xarray provides a useful function for
opening multiple files as a single dataset, :py:func:`xarray.open_mfdataset`. This
allows outputs from all processes to get treated as a single data array.

.. warning::

  In this script process 0 is used to post process so the example is in one file.
  It is best practice to perform post processing in a separate job / script entirely
  to better utilize compute resources.

.. GENERATED FROM PYTHON SOURCE LINES 168-195

.. code-block:: Python


    if dist.rank == 0:
        import matplotlib.pyplot as plt
        import xarray as xr

        from earth2studio.utils.time import timearray_to_datetime

        paths = [f"outputs/08_output_{i}.zarr" for i in range(dist.world_size)]
        ds = xr.open_mfdataset(paths, combine="nested", concat_dim="time", engine="zarr")
        print(ds)

        ncols = 3
        fig, ax = plt.subplots(2, ncols, figsize=(12, 6))

        time = timearray_to_datetime(ds.coords["time"].values)
        for i in range(6):
            ax[i // ncols, i % ncols].imshow(
                ds["tcwv"].isel(time=i, lead_time=-1).values,
                cmap="gist_earth",
                vmin=0,
                vmax=100,
            )
            ax[i // ncols, i % ncols].set_title(time[i].strftime("%m/%d/%Y"))
        plt.suptitle(
            f'TCWV Forecast Lead Time - {ds.coords["lead_time"].values[-1].astype("timedelta64[D]").astype(int)} days'
        )
        plt.savefig("outputs/08_tcwv_distributed_manager.jpg")



.. image-sg:: /examples/images/sphx_glr_08_distributed_manager_001.png
   :alt: TCWV Forecast Lead Time - 5 days, 06/01/2000, 06/01/2001, 06/01/2002, 06/01/2003, 06/01/2004, 06/01/2005
   :srcset: /examples/images/sphx_glr_08_distributed_manager_001.png, /examples/images/sphx_glr_08_distributed_manager_001_2_00x.png 2.00x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    <xarray.Dataset>
    Dimensions:    (lat: 721, lead_time: 21, lon: 1440, time: 6)
    Coordinates:
      * lat        (lat) float64 90.0 89.75 89.5 89.25 ... -89.25 -89.5 -89.75 -90.0
      * lead_time  (lead_time) timedelta64[h] 0 days 00:00:00 ... 5 days 00:00:00
      * lon        (lon) float64 0.0 0.25 0.5 0.75 1.0 ... 359.0 359.2 359.5 359.8
      * time       (time) datetime64[ns] 2000-06-01 2001-06-01 ... 2005-06-01
    Data variables:
        tcwv       (time, lead_time, lat, lon) float32 dask.array<chunksize=(1, 21, 721, 1440), meta=np.ndarray>





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (2 minutes 27.180 seconds)


.. _sphx_glr_download_examples_08_distributed_manager.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 08_distributed_manager.ipynb <08_distributed_manager.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 08_distributed_manager.py <08_distributed_manager.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
