v/0.3.0/_sources/examples/08_distributed_manager.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/08_distributed_manager.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_08_distributed_manager.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_08_distributed_manager.py:


Distributed Manager Inference
=============================

Setting up distributed manager for parallel inference

Many inference workflows are embarrassingly parallel and can be easily sharded across
multiple devices.
This example demonstrates how one can use the Modulus distributed manager to distribute
inference across mutliple GPUs.
The `distributed manager <https://github.com/NVIDIA/modulus/blob/main/modulus/distributed/manager.py>`_
is a utility that provides a useful set of properties that pertain to a parallel
environment.

In this example you will learn:

- How to use the distributed manager to access parallel environment properties
- Parallelize deterministic inference across multiple initial date-times
- Limitations of parallel inference in Earth2Studio
- Post-processing strategies of parallel job outputs

.. GENERATED FROM PYTHON SOURCE LINES 41-60

Set Up
------
Set up the distributed manager by initializing it. Out of the box, the distributed
manager supports MPI, SLURM and PyTorch parallel environments which provide information
regarding the parallel enviroment but environment variables.

For example, this script could be ran using:

.. code-block:: bash

  # OpenMPI
  mpirun -np 2 python 08_distributed_manager.py
  # Torch run
  torchrun --standalone --nnodes=1 --nproc-per-node=2 08_distributed_manager.py

.. warning::

  When running in parallel, make sure the .env file in the repository examples
  folder is *not* present. The .env file is intended for the documentation build only.

.. GENERATED FROM PYTHON SOURCE LINES 62-83

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    import numpy as np
    import torch
    from loguru import logger
    from modulus.distributed import DistributedManager

    DistributedManager.initialize()  # Only call this once in the entire script!
    dist = DistributedManager()
    assert (  # noqa: S101
        dist._distributed
    ), "Looks like torch distributed isn't set up. Check your env variables!"

    logger.info(
        f"Inference runner {dist.rank} of {dist.world_size} with device {dist.device}"
    )




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-09-20 16:04:19.315 | INFO     | __main__:<module>:80 - Inference runner 0 of 1 with device cuda:0




.. GENERATED FROM PYTHON SOURCE LINES 84-88

Next the needed components get initialized.
Rigorous parallel support is not part of Earth2Studio's design goals, there are some
spots where potential race conditions can occur. Thus some additional care should be
taken to ensure safe parallel inference.

.. GENERATED FROM PYTHON SOURCE LINES 90-103

.. code-block:: Python

    from earth2studio.data import WB2ERA5
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import DLWP

    # Load model
    package = DLWP.load_default_package()
    if dist.rank == 0:
        model = DLWP.load_model(package)

    torch.distributed.barrier()
    if dist.rank != 0:
        model = DLWP.load_model(package)








.. GENERATED FROM PYTHON SOURCE LINES 104-111

When loading models that are built into Earth2Studio, the model's checkpoint files
will be downloaded into the machines cache. If each inference process has access to
the same cache location, then only one should download the checkpoint triggered by
:py:func:`load_model`.

Here :py:class:`earth2studio.models.px.DLWP` checkpoint files are first downloaded by
process 0 and then loaded by other processes.

.. GENERATED FROM PYTHON SOURCE LINES 113-117

.. code-block:: Python


    # Create the data source
    data = WB2ERA5()








.. GENERATED FROM PYTHON SOURCE LINES 118-121

The remote date store will place cached data into separate caches for each process.
This makes the download of initial state data safe during parallel inference but also
means that multiple jobs will download the same date-time if needed.

.. GENERATED FROM PYTHON SOURCE LINES 123-130

.. code-block:: Python

    chunks = {"time": 1}
    io = ZarrBackend(
        file_name=f"outputs/08_output_{dist.rank}.zarr",
        chunks=chunks,
        backend_kwargs={"overwrite": True},
    )








.. GENERATED FROM PYTHON SOURCE LINES 131-141

Earth2Studio does not provide distributed IO support. The recommendation is to always
output data for each process to a separate file, then aggregate the data during post
processing.

Execute the Workflow
--------------------
Next we can run the workflow. This example will run inference for a random date across
several years and just save total column water vapor. Shard the initial date-times
across the each process. The distributed manager will provide the device ID for the
process.

.. GENERATED FROM PYTHON SOURCE LINES 143-160

.. code-block:: Python

    import earth2studio.run as run

    times = np.array([f"200{i:d}-06-01T00:00:00" for i in range(0, 6)])
    assert (  # noqa: S101
        len(times) > dist.world_size
    ), "Inference runs should be greater than processes"
    time_shard = np.array_split(times, dist.world_size)[dist.rank]

    nsteps = 20
    output_coords = {"variable": np.array(["tcwv"])}
    io = run.deterministic(
        time_shard, nsteps, model, data, io, output_coords=output_coords, device=dist.device
    )

    print(io.root.tree())
    torch.distributed.barrier()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-09-20 16:04:24.305 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2024-09-20 16:04:24.307 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda:0
    Fetching WB2 ERA5 for 2000-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.323 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2000-05-31T18:00:00
    Fetching WB2 ERA5 for 2000-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.357 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2000-05-31T18:00:00
    Fetching WB2 ERA5 for 2000-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.380 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2000-05-31T18:00:00
    Fetching WB2 ERA5 for 2000-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.399 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2000-05-31T18:00:00
    Fetching WB2 ERA5 for 2000-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.421 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2000-05-31T18:00:00
    Fetching WB2 ERA5 for 2000-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2000-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 41.99it/s]                                                                                            2024-09-20 16:04:24.442 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2000-05-31T18:00:00
    Fetching WB2 ERA5 for 2000-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 41.99it/s]                                                                                            2024-09-20 16:04:24.448 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2000-05-31T18:00:00
    Fetching WB2 ERA5 for 2000-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 41.99it/s]    Fetching WB2 ERA5 for 2000-05-31 18:00:00: 100%|██████████| 7/7 [00:00<00:00, 54.72it/s]
    Fetching WB2 ERA5 for 2001-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.453 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2001-05-31T18:00:00
    Fetching WB2 ERA5 for 2001-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.474 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2001-05-31T18:00:00
    Fetching WB2 ERA5 for 2001-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.494 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2001-05-31T18:00:00
    Fetching WB2 ERA5 for 2001-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.514 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2001-05-31T18:00:00
    Fetching WB2 ERA5 for 2001-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.534 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2001-05-31T18:00:00
    Fetching WB2 ERA5 for 2001-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2001-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 49.27it/s]                                                                                            2024-09-20 16:04:24.555 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2001-05-31T18:00:00
    Fetching WB2 ERA5 for 2001-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 49.27it/s]                                                                                            2024-09-20 16:04:24.559 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2001-05-31T18:00:00
    Fetching WB2 ERA5 for 2001-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 49.27it/s]    Fetching WB2 ERA5 for 2001-05-31 18:00:00: 100%|██████████| 7/7 [00:00<00:00, 63.80it/s]
    Fetching WB2 ERA5 for 2002-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.565 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2002-05-31T18:00:00
    Fetching WB2 ERA5 for 2002-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.589 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2002-05-31T18:00:00
    Fetching WB2 ERA5 for 2002-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.610 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2002-05-31T18:00:00
    Fetching WB2 ERA5 for 2002-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.630 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2002-05-31T18:00:00
    Fetching WB2 ERA5 for 2002-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.651 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2002-05-31T18:00:00
    Fetching WB2 ERA5 for 2002-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2002-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 46.99it/s]                                                                                            2024-09-20 16:04:24.672 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2002-05-31T18:00:00
    Fetching WB2 ERA5 for 2002-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 46.99it/s]                                                                                            2024-09-20 16:04:24.676 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2002-05-31T18:00:00
    Fetching WB2 ERA5 for 2002-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 46.99it/s]    Fetching WB2 ERA5 for 2002-05-31 18:00:00: 100%|██████████| 7/7 [00:00<00:00, 61.37it/s]
    Fetching WB2 ERA5 for 2003-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.682 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2003-05-31T18:00:00
    Fetching WB2 ERA5 for 2003-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.703 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2003-05-31T18:00:00
    Fetching WB2 ERA5 for 2003-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.724 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2003-05-31T18:00:00
    Fetching WB2 ERA5 for 2003-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.745 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2003-05-31T18:00:00
    Fetching WB2 ERA5 for 2003-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.766 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2003-05-31T18:00:00
    Fetching WB2 ERA5 for 2003-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2003-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.49it/s]                                                                                            2024-09-20 16:04:24.787 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2003-05-31T18:00:00
    Fetching WB2 ERA5 for 2003-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.49it/s]                                                                                            2024-09-20 16:04:24.791 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2003-05-31T18:00:00
    Fetching WB2 ERA5 for 2003-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.49it/s]    Fetching WB2 ERA5 for 2003-05-31 18:00:00: 100%|██████████| 7/7 [00:00<00:00, 62.01it/s]
    Fetching WB2 ERA5 for 2004-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.797 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2004-05-31T18:00:00
    Fetching WB2 ERA5 for 2004-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.819 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2004-05-31T18:00:00
    Fetching WB2 ERA5 for 2004-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.840 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2004-05-31T18:00:00
    Fetching WB2 ERA5 for 2004-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.860 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2004-05-31T18:00:00
    Fetching WB2 ERA5 for 2004-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.882 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2004-05-31T18:00:00
    Fetching WB2 ERA5 for 2004-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2004-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.77it/s]                                                                                            2024-09-20 16:04:24.902 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2004-05-31T18:00:00
    Fetching WB2 ERA5 for 2004-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.77it/s]                                                                                            2024-09-20 16:04:24.906 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2004-05-31T18:00:00
    Fetching WB2 ERA5 for 2004-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.77it/s]    Fetching WB2 ERA5 for 2004-05-31 18:00:00: 100%|██████████| 7/7 [00:00<00:00, 62.29it/s]
    Fetching WB2 ERA5 for 2005-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.912 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2005-05-31T18:00:00
    Fetching WB2 ERA5 for 2005-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.933 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2005-05-31T18:00:00
    Fetching WB2 ERA5 for 2005-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.954 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2005-05-31T18:00:00
    Fetching WB2 ERA5 for 2005-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.975 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2005-05-31T18:00:00
    Fetching WB2 ERA5 for 2005-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:24.996 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2005-05-31T18:00:00
    Fetching WB2 ERA5 for 2005-05-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2005-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.23it/s]                                                                                            2024-09-20 16:04:25.018 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2005-05-31T18:00:00
    Fetching WB2 ERA5 for 2005-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.23it/s]                                                                                            2024-09-20 16:04:25.022 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2005-05-31T18:00:00
    Fetching WB2 ERA5 for 2005-05-31 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.23it/s]    Fetching WB2 ERA5 for 2005-05-31 18:00:00: 100%|██████████| 7/7 [00:00<00:00, 61.37it/s]
    Fetching WB2 ERA5 for 2000-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.087 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2000-06-01T00:00:00
    Fetching WB2 ERA5 for 2000-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.108 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2000-06-01T00:00:00
    Fetching WB2 ERA5 for 2000-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.128 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2000-06-01T00:00:00
    Fetching WB2 ERA5 for 2000-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.149 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2000-06-01T00:00:00
    Fetching WB2 ERA5 for 2000-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.170 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2000-06-01T00:00:00
    Fetching WB2 ERA5 for 2000-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2000-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.77it/s]                                                                                            2024-09-20 16:04:25.191 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2000-06-01T00:00:00
    Fetching WB2 ERA5 for 2000-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.77it/s]                                                                                            2024-09-20 16:04:25.195 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2000-06-01T00:00:00
    Fetching WB2 ERA5 for 2000-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.77it/s]    Fetching WB2 ERA5 for 2000-06-01 00:00:00: 100%|██████████| 7/7 [00:00<00:00, 62.37it/s]
    Fetching WB2 ERA5 for 2001-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.201 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2001-06-01T00:00:00
    Fetching WB2 ERA5 for 2001-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.223 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2001-06-01T00:00:00
    Fetching WB2 ERA5 for 2001-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.244 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2001-06-01T00:00:00
    Fetching WB2 ERA5 for 2001-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.266 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2001-06-01T00:00:00
    Fetching WB2 ERA5 for 2001-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.287 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2001-06-01T00:00:00
    Fetching WB2 ERA5 for 2001-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2001-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 46.89it/s]                                                                                            2024-09-20 16:04:25.308 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2001-06-01T00:00:00
    Fetching WB2 ERA5 for 2001-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 46.89it/s]                                                                                            2024-09-20 16:04:25.312 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2001-06-01T00:00:00
    Fetching WB2 ERA5 for 2001-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 46.89it/s]    Fetching WB2 ERA5 for 2001-06-01 00:00:00: 100%|██████████| 7/7 [00:00<00:00, 60.91it/s]
    Fetching WB2 ERA5 for 2002-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.318 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2002-06-01T00:00:00
    Fetching WB2 ERA5 for 2002-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.340 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2002-06-01T00:00:00
    Fetching WB2 ERA5 for 2002-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.361 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2002-06-01T00:00:00
    Fetching WB2 ERA5 for 2002-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.382 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2002-06-01T00:00:00
    Fetching WB2 ERA5 for 2002-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.403 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2002-06-01T00:00:00
    Fetching WB2 ERA5 for 2002-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2002-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.48it/s]                                                                                            2024-09-20 16:04:25.424 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2002-06-01T00:00:00
    Fetching WB2 ERA5 for 2002-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.48it/s]                                                                                            2024-09-20 16:04:25.428 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2002-06-01T00:00:00
    Fetching WB2 ERA5 for 2002-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.48it/s]    Fetching WB2 ERA5 for 2002-06-01 00:00:00: 100%|██████████| 7/7 [00:00<00:00, 61.89it/s]
    Fetching WB2 ERA5 for 2003-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.434 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2003-06-01T00:00:00
    Fetching WB2 ERA5 for 2003-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.456 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2003-06-01T00:00:00
    Fetching WB2 ERA5 for 2003-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.477 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2003-06-01T00:00:00
    Fetching WB2 ERA5 for 2003-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.497 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2003-06-01T00:00:00
    Fetching WB2 ERA5 for 2003-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.518 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2003-06-01T00:00:00
    Fetching WB2 ERA5 for 2003-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2003-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.45it/s]                                                                                            2024-09-20 16:04:25.539 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2003-06-01T00:00:00
    Fetching WB2 ERA5 for 2003-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.45it/s]                                                                                            2024-09-20 16:04:25.545 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2003-06-01T00:00:00
    Fetching WB2 ERA5 for 2003-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.45it/s]    Fetching WB2 ERA5 for 2003-06-01 00:00:00: 100%|██████████| 7/7 [00:00<00:00, 60.84it/s]
    Fetching WB2 ERA5 for 2004-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.552 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2004-06-01T00:00:00
    Fetching WB2 ERA5 for 2004-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.572 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2004-06-01T00:00:00
    Fetching WB2 ERA5 for 2004-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.594 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2004-06-01T00:00:00
    Fetching WB2 ERA5 for 2004-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.614 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2004-06-01T00:00:00
    Fetching WB2 ERA5 for 2004-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.635 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2004-06-01T00:00:00
    Fetching WB2 ERA5 for 2004-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2004-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.82it/s]                                                                                            2024-09-20 16:04:25.656 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2004-06-01T00:00:00
    Fetching WB2 ERA5 for 2004-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.82it/s]                                                                                            2024-09-20 16:04:25.660 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2004-06-01T00:00:00
    Fetching WB2 ERA5 for 2004-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.82it/s]    Fetching WB2 ERA5 for 2004-06-01 00:00:00: 100%|██████████| 7/7 [00:00<00:00, 62.37it/s]
    Fetching WB2 ERA5 for 2005-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.666 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t850 at 2005-06-01T00:00:00
    Fetching WB2 ERA5 for 2005-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.687 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z1000 at 2005-06-01T00:00:00
    Fetching WB2 ERA5 for 2005-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.708 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z700 at 2005-06-01T00:00:00
    Fetching WB2 ERA5 for 2005-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.729 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z500 at 2005-06-01T00:00:00
    Fetching WB2 ERA5 for 2005-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                                    2024-09-20 16:04:25.750 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: z300 at 2005-06-01T00:00:00
    Fetching WB2 ERA5 for 2005-06-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching WB2 ERA5 for 2005-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.52it/s]                                                                                            2024-09-20 16:04:25.772 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: tcwv at 2005-06-01T00:00:00
    Fetching WB2 ERA5 for 2005-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.52it/s]                                                                                            2024-09-20 16:04:25.775 | DEBUG    | earth2studio.data.wb2:fetch_wb2_dataarray:160 - Fetching WB2 ERA5 zarr array for variable: t2m at 2005-06-01T00:00:00
    Fetching WB2 ERA5 for 2005-06-01 00:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 47.52it/s]    Fetching WB2 ERA5 for 2005-06-01 00:00:00: 100%|██████████| 7/7 [00:00<00:00, 61.88it/s]
    2024-09-20 16:04:26.019 | SUCCESS  | earth2studio.run:deterministic:95 - Fetched data from WB2ERA5
    2024-09-20 16:04:26.028 | INFO     | earth2studio.run:deterministic:125 - Inference starting!
    Running inference:   0%|          | 0/21 [00:00<?, ?it/s]    Running inference:   5%|▍         | 1/21 [00:00<00:05,  3.65it/s]    Running inference:  10%|▉         | 2/21 [00:00<00:07,  2.56it/s]    Running inference:  14%|█▍        | 3/21 [00:01<00:07,  2.33it/s]    Running inference:  19%|█▉        | 4/21 [00:01<00:07,  2.15it/s]    Running inference:  24%|██▍       | 5/21 [00:02<00:07,  2.04it/s]    Running inference:  29%|██▊       | 6/21 [00:02<00:07,  1.91it/s]    Running inference:  33%|███▎      | 7/21 [00:03<00:07,  1.81it/s]    Running inference:  38%|███▊      | 8/21 [00:04<00:07,  1.70it/s]    Running inference:  43%|████▎     | 9/21 [00:04<00:07,  1.62it/s]    Running inference:  48%|████▊     | 10/21 [00:05<00:07,  1.55it/s]    Running inference:  52%|█████▏    | 11/21 [00:06<00:06,  1.50it/s]    Running inference:  57%|█████▋    | 12/21 [00:07<00:06,  1.42it/s]    Running inference:  62%|██████▏   | 13/21 [00:07<00:05,  1.39it/s]    Running inference:  67%|██████▋   | 14/21 [00:08<00:05,  1.32it/s]    Running inference:  71%|███████▏  | 15/21 [00:09<00:04,  1.29it/s]    Running inference:  76%|███████▌  | 16/21 [00:10<00:03,  1.25it/s]    Running inference:  81%|████████  | 17/21 [00:11<00:03,  1.20it/s]    Running inference:  86%|████████▌ | 18/21 [00:12<00:02,  1.09it/s]    Running inference:  90%|█████████ | 19/21 [00:13<00:01,  1.03it/s]    Running inference:  95%|█████████▌| 20/21 [00:14<00:01,  1.03s/it]    Running inference: 100%|██████████| 21/21 [00:15<00:00,  1.08s/it]    Running inference: 100%|██████████| 21/21 [00:15<00:00,  1.33it/s]
    2024-09-20 16:04:41.813 | SUCCESS  | earth2studio.run:deterministic:135 - Inference complete
    /
     ├── lat (721,) float64
     ├── lead_time (21,) timedelta64[h]
     ├── lon (1440,) float64
     ├── tcwv (6, 21, 721, 1440) float32
     └── time (6,) datetime64[ns]




.. GENERATED FROM PYTHON SOURCE LINES 161-172

Post Processing
---------------
Finally, we can post process the results. Xarray provides a useful function for
opening multiple files as a single dataset, :py:func:`xarray.open_mfdataset`. This
allows outputs from all processes to get treated as a single data array.

.. warning::

  In this script process 0 is used to post process so the example is in one file.
  It is best practice to perform post processing in a separate job / script entirely
  to better utilize compute resources.

.. GENERATED FROM PYTHON SOURCE LINES 172-199

.. code-block:: Python


    if dist.rank == 0:
        import matplotlib.pyplot as plt
        import xarray as xr

        from earth2studio.utils.time import timearray_to_datetime

        paths = [f"outputs/08_output_{i}.zarr" for i in range(dist.world_size)]
        ds = xr.open_mfdataset(paths, combine="nested", concat_dim="time", engine="zarr")
        print(ds)

        ncols = 3
        fig, ax = plt.subplots(2, ncols, figsize=(12, 6))

        time = timearray_to_datetime(ds.coords["time"].values)
        for i in range(6):
            ax[i // ncols, i % ncols].imshow(
                ds["tcwv"].isel(time=i, lead_time=-1).values,
                cmap="gist_earth",
                vmin=0,
                vmax=100,
            )
            ax[i // ncols, i % ncols].set_title(time[i].strftime("%m/%d/%Y"))
        plt.suptitle(
            f'TCWV Forecast Lead Time - {ds.coords["lead_time"].values[-1].astype("timedelta64[D]").astype(int)} days'
        )
        plt.savefig("outputs/08_tcwv_distributed_manager.jpg")



.. image-sg:: /examples/images/sphx_glr_08_distributed_manager_001.png
   :alt: TCWV Forecast Lead Time - 5 days, 06/01/2000, 06/01/2001, 06/01/2002, 06/01/2003, 06/01/2004, 06/01/2005
   :srcset: /examples/images/sphx_glr_08_distributed_manager_001.png, /examples/images/sphx_glr_08_distributed_manager_001_2_00x.png 2.00x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    <xarray.Dataset> Size: 523MB
    Dimensions:    (time: 6, lead_time: 21, lat: 721, lon: 1440)
    Coordinates:
      * lat        (lat) float64 6kB 90.0 89.75 89.5 89.25 ... -89.5 -89.75 -90.0
      * lead_time  (lead_time) timedelta64[ns] 168B 0 days 00:00:00 ... 5 days 00...
      * lon        (lon) float64 12kB 0.0 0.25 0.5 0.75 ... 359.0 359.2 359.5 359.8
      * time       (time) datetime64[ns] 48B 2000-06-01 2001-06-01 ... 2005-06-01
    Data variables:
        tcwv       (time, lead_time, lat, lon) float32 523MB dask.array<chunksize=(1, 21, 721, 1440), meta=np.ndarray>





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 25.320 seconds)

**Estimated memory usage:**  1747 MB


.. _sphx_glr_download_examples_08_distributed_manager.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 08_distributed_manager.ipynb <08_distributed_manager.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 08_distributed_manager.py <08_distributed_manager.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 08_distributed_manager.zip <08_distributed_manager.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
